c/examples/writing-a-c-compiler-tests/tests/chapter_9/valid/arguments_in_registers/param_shadows_local_var.c
int main(void) {
    int a = 10;
    // a function declaration is a separate scope,
    // so parameter 'a' doesn't conflict with variable 'a' above
    int f(int a);
    return f(a);
}

int f(int a) {
    return a * 2;
}